# ChangeLog for sys-cluster/nova
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/nova/ChangeLog,v 1.89 2015/05/07 23:04:40 prometheanfire Exp $

  07 May 2015; Matthew Thode <prometheanfire@gentoo.org> nova-2015.1.0.ebuild,
  nova-2015.1.9999.ebuild:
  fixed doc generation

  04 May 2015; Matthew Thode <prometheanfire@gentoo.org> nova-2015.1.0.ebuild,
  nova-2015.1.9999.ebuild:
  fixing eventlet deps

*nova-2015.1.0 (30 Apr 2015)
*nova-2015.1.9999 (30 Apr 2015)

  30 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> +nova-2015.1.0.ebuild,
  +nova-2015.1.9999.ebuild:
  kilo released :D

*nova-2014.2.3 (13 Apr 2015)

  13 Apr 2015; Matthew Thode <prometheanfire@gentoo.org> +nova-2014.2.3.ebuild,
  -files/CVE-2015-0259-2014.2.2.patch, -nova-2014.2.2-r1.ebuild:
  bup

  24 Mar 2015; Matthew Thode <prometheanfire@gentoo.org>
  nova-2014.2.2-r1.ebuild, nova-2014.2.9999.ebuild:
  updating kernel module naming bug 532750

*nova-2014.2.2-r1 (11 Mar 2015)

  11 Mar 2015; Matthew Thode <prometheanfire@gentoo.org>
  +files/CVE-2015-0259-2014.2.2.patch, +nova-2014.2.2-r1.ebuild,
  -nova-2014.2.1.ebuild, -nova-2014.2.2.ebuild:
  fixing CVE-2015-0259

*nova-2014.2.2 (08 Feb 2015)

  08 Feb 2015; Matthew Thode <prometheanfire@gentoo.org> +nova-2014.2.2.ebuild,
  -nova-9999.ebuild, metadata.xml, nova-2014.2.9999.ebuild:
  bup

  13 Jan 2015; Matthew Thode <prometheanfire@gentoo.org> -files/nova-confd,
  -files/nova-initd, -files/nova.sudoersd, -nova-2014.2.ebuild,
  nova-2014.2.1.ebuild, nova-2014.2.9999.ebuild, nova-9999.ebuild:
  general cleanup and fixing bug 536340

*nova-2014.2.1 (09 Dec 2014)

  09 Dec 2014; Matthew Thode <prometheanfire@gentoo.org> +nova-2014.2.1.ebuild,
  nova-2014.2.9999.ebuild:
  bumping for release

  26 Nov 2014; Matthew Thode <prometheanfire@gentoo.org> -nova-2014.1.3.ebuild,
  -nova-2014.1.9999.ebuild:
  removing old nova stuffs
