@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/nova/nova-2015.1.0.ebuild,v 1.3 2015/05/07 23:04:40 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/nova/nova-2015.1.0.ebuild,v 1.4 2015/05/07 23:35:09 prometheanfire Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -108,9 +108,11 @@ RDEPEND="
 	sys-fs/sysfsutils
 	sys-fs/multipath-tools
 	net-misc/bridge-utils
-	kvm? ( app-emulation/qemu )
-	xen? ( app-emulation/xen
-		   app-emulation/xen-tools )"
+	compute? (
+		kvm? ( app-emulation/qemu )
+		xen? ( app-emulation/xen
+			   app-emulation/xen-tools )
+	)"
 
 PATCHES=(
 )
