@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/nova
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/nova/ChangeLog,v 1.89 2015/05/07 23:04:40 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/nova/ChangeLog,v 1.90 2015/05/07 23:35:09 prometheanfire Exp $
+
+  07 May 2015; Matthew Thode <prometheanfire@gentoo.org> nova-2015.1.0.ebuild,
+  nova-2015.1.9999.ebuild:
+  don't need qemu or xen stuff if not doing compute
 
   07 May 2015; Matthew Thode <prometheanfire@gentoo.org> nova-2015.1.0.ebuild,
   nova-2015.1.9999.ebuild:
